--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -152,7 +152,7 @@
                     {#            </a>#}
                     {#          </li>#}
                     <li class="nav-item">
-                        <a class="nav-link" href="/icons.html">
+                        <a class="nav-link" href="/admin/amcm/paquetesdescuento/">
                             <i class="fas fa-percentage text-secondary"></i>
                             <span class="nav-link-text">Paquetes de descuento</span>
                         </a>
