--- a/apps/amcm/templates/amcm/listado_elegibles.html
+++ b/apps/amcm/templates/amcm/listado_elegibles.html
@@ -14,7 +14,8 @@
                             <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                                 <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Inicio</li>
-                                <li class="breadcrumb-item active" aria-current="page"><a href="/admin/amcm/evento/">Eventos</a></li>
+                                <li class="breadcrumb-item active" aria-current="page"><a href="/admin/amcm/evento/">Eventos</a>
+                                </li>
                             </ol>
                         </nav>
                     </div>
@@ -31,50 +32,56 @@
                 <div class="card">
                     <!-- Card header -->
                     <div class="card-header border-0">
-                        <h3 class="mb-0 text-center" > {{ evento.nombre }} </h3>
+                        <h3 class="mb-0 text-center"> {{ evento.nombre }} </h3>
                         <div class="text-center">{{ evento.descripcion_evento| linebreaks }}</div>
                         <br/>
-                        <table width="100%">
+                        <table class="table table-sm" width="100%">
                             <tr>
                                 <td width="50%">
-                                    <span class="text-left"> {% for condicion in evento.condiciones_evento %} {% if condicion.limite == 'PESO'  %} {{  condicion.limite }}: &nbsp; {{  condicion.valor }} &nbsp; {{  condicion.especificacion }} {% endif %}{% endfor %}</span>
+                                    <span class="text-left"> {% for condicion in evento.condiciones_evento %}
+                                        {% if condicion.limite == 'PESO' %} {{ condicion.limite }}: &nbsp;
+                                            {{ condicion.valor }} &nbsp; {{ condicion.especificacion }}
+                                        {% endif %}{% endfor %}</span>
                                 </td>
-                                <td  width="50%" style="text-align: end">
-                                   <span > DISTANCIA: {{  evento.yardas }} YARDAS </span>
+                                <td width="50%" style="text-align: end">
+                                    <span> DISTANCIA: {{ evento.yardas }} YARDAS </span>
                                 </td>
                             </tr>
-                            <tr><td colspan="2">&nbsp;</td></tr>
+
                             <tr>
                                 <td colspan="2" style="text-align: center">
                                     <table width="80%" align="center">
                                         {% for cuota in evento.cuotas_evento %}
-                                        <tr>
-                                            <td style="text-align: left" width="70%">
-                                                {{ cuota.tipoCuota}}
-                                                {% if cuota.tipoCuota.id == 2 %}
-                                                   ( ${{ cuota.monto }} ) CON EL {{ evento.descuento }} DE DESCUENTO
-                                                {% else %}
-                                                    : {{ cuota.fechaVencimiento|date:"l, d F Y" }}
-                                                {% endif %}
-                                            </td>
-                                            <td style="text-align: left" width="30%">
-                                                {% if cuota.tipoCuota.id == 2 %}
-                                                    $ {{ descuento }}
-                                                {% else %}
-                                                    $ {{ cuota.monto }} {{ cuota.observacion }}
-                                                {% endif %}
-                                            </td>
-                                        </tr>
-                                        {% endfor %}
-                                        <tr><td colspan="2">&nbsp;</td></tr>
-                                        {% for fecha in evento.fechas_evento %}
                                             <tr>
-                                                <td colspan="2" style="text-align: center">
-                                                    {{ fecha.tipoFecha}}:     {{ fecha.fecha|date:"l, d F Y"  }}
+                                                <td style="text-align: left" width="70%">
+                                                    {{ cuota.tipoCuota }}
+                                                    {% if cuota.tipoCuota.id == 2 %}
+                                                        ( ${{ cuota.monto }} ) CON EL {{ evento.descuento }} DE
+                                                        DESCUENTO
+                                                    {% else %}
+                                                        : {{ cuota.fechaVencimiento|date:"l, d F Y" }}
+                                                    {% endif %}
+                                                </td>
+                                                <td style="text-align: left" width="30%">
+                                                    {% if cuota.tipoCuota.id == 2 %}
+                                                        $ {{ descuento }}
+                                                    {% else %}
+                                                        $ {{ cuota.monto }} {{ cuota.observacion }}
+                                                    {% endif %}
                                                 </td>
                                             </tr>
                                         {% endfor %}
-                                     <tr><td colspan="2">&nbsp;</td></tr>
+                                        <tr>
+                                            <td colspan="2">&nbsp;</td>
+                                        </tr>
+                                        {% for fecha in evento.fechas_evento %}
+                                            <tr>
+                                                <td colspan="2" style="text-align: center">
+                                                    {{ fecha.tipoFecha }}: {{ fecha.fecha|date:"l, d F Y" }}
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
+
                                     </table>
                                 </td>
                             </tr>
@@ -82,59 +89,95 @@
                     </div>
 
                     <div class="table-responsive pb-4">
-                        <table class="table table-flush" id="result_list" width="95%">
+                        <table class="table table-flush" id="table-collapse" width="100%">
                             <thead class="thead-light">
-                                <tr>
-                                    <td width="2px">&nbsp; </td>
-                                    <td width="30px" colspan="2">&nbsp;</td>
-                                    {% for obj in cuotas %}
-                                        <td style="border-style: solid; border-width: 1px; border-top-color: #0a0c0d;"> {{ obj.tipoCuota.nombre }} <br/>
-                                             {{ obj.fechaVencimiento|date:"d-m-Y" }} <br/>
-                                             $ {{ obj.monto }}
-                                        </td>
-                                    {% endfor %}
-                                    <td width="5px">&nbsp;</td>
-                                </tr>
+                            <tr>
+                                <th width="30%">&nbsp;</th>
+
+                                {% for obj in cuotas %}
+                                    <th
+                                        style="border-style: solid; border-width: 1px; border-top-color: #0a0c0d;width: 10% !important;"> {{ obj.tipoCuota.nombre }}
+                                        <br/>
+                                        {{ obj.fechaVencimiento|date:"d-m-Y" }} <br/>
+                                        $ {{ obj.monto }}
+                                    </th>
+                                {% endfor %}
+                                <th width="30%"></th>
+                            </tr>
                             </thead>
                             <tbody>
 
                             {% for obj in cuadras %}
                                 <tr>
-                                    <td width="2px">&nbsp; </td>
-                                    <td width="30px" colspan="2"><strong>{{ obj.cuadra.nombre }}</strong></td>
-                                    <td colspan="{{ cuotas|length }}">{{ obj.cuadra.representante }} &nbsp; {{ obj.cuadra.telefono }} {% if obj.cuadra.celular != "" %} &nbsp;/&nbsp; {{ obj.cuadra.celular }} {% endif %}  {% for contacto in obj.cuadra.contactos %} &nbsp; &nbsp;&nbsp; &nbsp; {{ contacto.nombre }}&nbsp; &nbsp; {{ contacto.telefono }} {% endfor %} &nbsp; &nbsp; {{ obj.cuadra.correoElectronico }}  </td>
-                                    <td width="5px">&nbsp;</td>
-                                </tr>
+                                    <td class="all"></td>
+                                    <td class="all" width="">&nbsp;</td>
+                                    <td class="all" width="" colspan=""><strong>{{ obj.cuadra.nombre }}</strong></td>
+                                    <td class="all" width="">&nbsp;</td>
+                                    <td class="all">{{ obj.cuadra.representante }}
+                                        &nbsp; {{ obj.cuadra.telefono }} {% if obj.cuadra.celular != "" %} &nbsp;/&nbsp;
+                                            {{ obj.cuadra.celular }} {% endif %}
+                                        {% for contacto in obj.cuadra.contactos %} &nbsp; &nbsp;&nbsp; &nbsp;
+                                            {{ contacto.nombre }}&nbsp; &nbsp; {{ contacto.telefono }} {% endfor %}
+                                        &nbsp; &nbsp; {{ obj.cuadra.correoElectronico }}  </td>
 
-                                {% for ejemplar in obj.ejemplar %}
 
-                                <tr>
-                                    <td width="2px">{{ ejemplar.consecutivo }}</td>
-                                    <td width="5px" style="border-style: solid; border-width: 1px; border-top-color: #0a0c0d;">{{ ejemplar.lote }}</td>
-                                    <td width="25px" style="border-style: solid; border-width: 1px; border-top-color: #0a0c0d;"> {{ ejemplar.nombre }}</td>
-                                    {% for obj in ejemplar.recibos %}
-                                        <td style="border-style: solid; border-width: 1px; border-top-color: #0a0c0d; text-align: center">
-                                              {% for numero in obj.recibo %}
-                                                {{ numero.numero_recibo }}
-                                                  {% if  not forloop.last %}
-                                                      <br/>
-                                                  {% endif %}
-                                            {% endfor %}
+                                    <td class="none">
+                                     <table>
+                                      <thead class="thead-light">
+                                                <tr>
+                                                    <th width="10%"></th>
+                                                    <th width="10%"></th>
+                                                    <th width="10%"></th>
+                                                    {% for obj in cuotas %}
+                                                        <th width="10%"
+                                                            style="border-style: solid; border-width: 1px; border-top-color: #0a0c0d;"> {{ obj.tipoCuota.nombre }}
+                                                            <br/>
+                                                            {{ obj.fechaVencimiento|date:"d-m-Y" }} <br/>
+                                                            $ {{ obj.monto }}
+                                                        </th>
+                                                    {% endfor %}
+                                                    <th width="5%"></th>
+                                                </tr>
+                                                </thead>
+                                        {% for ejemplar in obj.ejemplar %}
+                                           <tbody>
 
-                                               {% if ejemplar.estatus  %}
-                                                   <br/> RETIRADO
-                                               {% endif %}
-                                        </td>
-                                    {% endfor %}
-                                    <td width="5px">
-                                        {% if not ejemplar.estatus  %}
-                                            <a href="/admin/amcm/eventoelegibles/{{ ejemplar.eventoelegible }}/change/"><button type="button" class="btn btn-outline-secondary btn-sm"><i class="far fa-window-close"></i></button></a>
-                                        {% endif %}
+
+                                                <td width="10%">{{ ejemplar.consecutivo }}</td>
+                                                <td width="10%"
+                                                    style="border-style: solid; border-width: 1px; border-top-color: #0a0c0d;">{{ ejemplar.lote }}</td>
+                                                <td width="35%"
+                                                    style="border-style: solid; border-width: 1px; border-top-color: #0a0c0d;"> {{ ejemplar.nombre }}</td>
+                                                {% for obj in ejemplar.recibos %}
+                                                    <td style="border-style: solid; border-width: 1px; border-top-color: #0a0c0d; text-align: center;width: 10%">
+                                                        {% for numero in obj.recibo %}
+                                                            {{ numero.numero_recibo }}
+                                                            {% if  not forloop.last %}
+                                                                <br/>
+                                                            {% endif %}
+                                                        {% endfor %}
+
+                                                        {% if ejemplar.estatus %}
+                                                            <br/> RETIRADO
+                                                        {% endif %}
+                                                    </td>
+                                                {% endfor %}
+                                                <td width="width: 5%">
+                                                    {% if not ejemplar.estatus %}
+                                                        <a href="/admin/amcm/eventoelegibles/{{ ejemplar.eventoelegible }}/change/">
+                                                            <button type="button"
+                                                                    class="btn btn-outline-secondary btn-sm"><i
+                                                                    class="far fa-window-close"></i></button>
+                                                        </a>
+                                                    {% endif %}
+                                                </td>
+                                            </tbody>
+
+
+                                        {% endfor %}
+                                 </table>
                                     </td>
                                 </tr>
-
-                                {% endfor %}
-
                             {% endfor %}
 
 
@@ -152,4 +195,50 @@
 {% endblock content %}
 
 <!-- Specific JS goes HERE -->
-{% block javascripts %}{% endblock javascripts %}
+{% block extra_js %}
+    <script>
+
+
+        $(document).ready(function () {
+            var table = $('#table-collapse').DataTable({
+                'responsive': true,
+                language: {
+					paginate: {
+						previous: "<i class='fas fa-angle-left'>",
+						next: "<i class='fas fa-angle-right'>"
+					},
+						"sProcessing": "Procesando...",
+						"sLengthMenu": "Mostrar _MENU_ registros",
+						"sZeroRecords": "No se encontraron resultados",
+						"sEmptyTable": "NingÃºn dato disponible en esta tabla",
+						"sInfo": "",
+						"sInfoEmpty": "",
+						"sInfoFiltered": "(filtrado de un total de _MAX_ registros)",
+						"sInfoPostFix": "",
+						"sSearch": "Buscar:",
+						"sUrl": "",
+						"sInfoThousands": ",",
+						"sLoadingRecords": "Cargando...",
+						"oPaginate": {
+							"sFirst": "Primero",
+							"sLast": "Ãšltimo",
+							"sNext": "Siguiente",
+							"sPrevious": "Anterior"
+						}
+					},
+            });
+
+            // Handle click on "Expand All" button
+            $('#btn-show-all-children').on('click', function () {
+                // Expand row details
+                table.rows(':not(.parent)').nodes().to$().find('td:first-child').trigger('click');
+            });
+
+            // Handle click on "Collapse All" button
+            $('#btn-hide-all-children').on('click', function () {
+                // Collapse row details
+                table.rows('.parent').nodes().to$().find('td:first-child').trigger('click');
+            });
+        });
+    </script>
+{% endblock extra_js %}
