--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -1,38 +1,49 @@
+<script src="/static/assets/vendor/jquery/dist/jquery.min.js"></script>
+<script src="/static/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/static/assets/vendor/js-cookie/js.cookie.js"></script>
+<script src="/static/assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js"></script>
+<script src="/static/assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
 
-  <script src="/static/assets/vendor/jquery/dist/jquery.min.js"></script>
-  <script src="/static/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/static/assets/vendor/js-cookie/js.cookie.js"></script>
-  <script src="/static/assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js"></script>
-  <script src="/static/assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
+<script src="/static/assets/vendor/datatables.net/js/jquery.dataTables.min.js"></script>
+<script src="/static/assets/vendor/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+<script src="/static/assets/vendor/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+<script src="/static/assets/vendor/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
+<script src="/static/assets/vendor/datatables.net-buttons/js/buttons.html5.min.js"></script>
+<script src="/static/assets/vendor/datatables.net-buttons/js/buttons.flash.min.js"></script>
+<script src="/static/assets/vendor/datatables.net-buttons/js/buttons.print.min.js"></script>
+<script src="/static/assets/vendor/datatables.net-select/js/dataTables.select.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
-    <script src="/static/assets/vendor/datatables.net/js/jquery.dataTables.min.js"></script>
-    <script src="/static/assets/vendor/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
-    <script src="/static/assets/vendor/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
-    <script src="/static/assets/vendor/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
-    <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.html5.min.js"></script>
-    <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.flash.min.js"></script>
-    <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.print.min.js"></script>
-    <script src="/static/assets/vendor/datatables.net-select/js/dataTables.select.min.js"></script>
-
+<script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
 <script>
-$( document ).ready(function() {
+    $(document).ready(function () {
+        $('.vIntegerField, .vTextField, .vDateField, .vLargeTextField').addClass('form-control');
+        $('select').addClass('form-control');
+        $('input[type=number]').addClass('form-control');
+        $('.vIntegerField').removeClass('vIntegerField');
+        $('.vTextField').removeClass('vTextField');
+        $('.field-observaciones').addClass('col-12');
+        $('.field-observaciones').removeClass('col-md-4 ');
 
-    $('.vIntegerField, .vTextField, .vDateField, .vLargeTextField').addClass('form-control');
-    $('select').addClass('form-control');
+        $('.field-descripcion_evento').addClass('col-12');
+        $('.field-descripcion_evento').removeClass('col-md-4 ');
 
-     $('input[type=number]').addClass('form-control');
-    $('.vIntegerField').removeClass('vIntegerField');
-    $('.vTextField').removeClass('vTextField');
-    $('.field-observaciones').addClass('col-12');
-    $('.field-observaciones').removeClass('col-md-4 ');
-     document.getElementById ("id_observaciones").rows = 3;
-    $('.field-descripcion_evento').addClass('col-12');
-    $('.field-descripcion_evento').removeClass('col-md-4 ');
-    document.getElementById ("id_descripcion_evento").rows = 4;
-$('.add-row-gsn>a').addClass('btn btn-default');
-$('.add-row-gsn>td>a').addClass('btn btn-default');
+        $('.add-row-gsn>a').addClass('btn btn-default');
+        $('.add-row-gsn>td>a').addClass('btn btn-default');
+        $('#id_password1').addClass('form-control');
+        $('#id_password2').addClass('form-control');
 
- $('#id_password1').addClass('form-control');
- $('#id_password2').addClass('form-control');
-});
+        $('#id_elegibles_evento').addClass('select2');
+         $('#id_cuadra').addClass('select2');
+         $('#id_evento').addClass('select2');
+        // $('.field-cuenta div select').addClass('select2');
+
+          document.getElementById("id_observaciones").rows = 3;
+         document.getElementById("id_descripcion_evento").rows = 4;
+    });
+</script>
+<script>
+    $(document).ready(function () {
+        $(".select2").select2({});
+    });
 </script>
