--- a/apps/amcm/templates/amcm/reporte_cuotas_acumulado_pdf.html
+++ b/apps/amcm/templates/amcm/reporte_cuotas_acumulado_pdf.html
@@ -172,7 +172,7 @@
         </tr>
         <tr>
             <td colspan="3" style="width: 100%;text-align: center">
-                 <p style="font-size: 15px">{{ evento.descripcion }}</p>
+                 <p style="font-size: 15px">{{ evento.descripcion| linebreaks }}</p>
             </td>
         </tr>
         <tr>
