--- a/apps/amcm/templates/amcm/reporte_cuota_acumulado.html
+++ b/apps/amcm/templates/amcm/reporte_cuota_acumulado.html
@@ -45,7 +45,7 @@
 
                 </tr>
                 <tr align="center">
-                  <th scope="col" class="sort" data-sort="name" colspan="3">{{ evento.descripcion }}</th>
+                  <th scope="col" class="sort" data-sort="name" colspan="3">{{ evento.descripcion| linebreaks }}</th>
 
                 </tr>
                 <tr align="right">
