--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -8,7 +8,14 @@
     <!-- Page plugins -->
     <link rel="stylesheet" href="/static/assets/vendor/fullcalendar/dist/fullcalendar.min.css">
     <link rel="stylesheet" href="/static/assets/vendor/sweetalert2/dist/sweetalert2.min.css">
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="/static/assets/ajax/dashboard.js"></script>
+    <style>
+        .smallandcenter{
+            text-align: center;
+            font-size: 7px;
+        }
+    </style>
 {% endblock stylesheets %}
 {% block content %}
 
@@ -41,11 +48,11 @@
                                 <div class="row">
                                     <div class="col">
                                         <h5 class="card-title text-uppercase text-muted mb-0">Total Eventos</h5>
-                                        <span class="h2 font-weight-bold mb-0">350,897</span>
+                                        <span class="h2 font-weight-bold mb-0" id="total_eventos">350,897</span>
                                     </div>
                                     <div class="col-auto">
                                         <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
-                                            <i class="ni ni-active-40"></i>
+                                            <i class="ni ni-calendar-grid-58"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -60,11 +67,11 @@
                                 <div class="row">
                                     <div class="col">
                                         <h5 class="card-title text-uppercase text-muted mb-0">Total Cuadras</h5>
-                                        <span class="h2 font-weight-bold mb-0">2,356</span>
+                                        <span class="h2 font-weight-bold mb-0" id="total_cuadras">2,356</span>
                                     </div>
                                     <div class="col-auto">
                                         <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
-                                            <i class="ni ni-chart-pie-35"></i>
+                                            <i class="fas fa-warehouse"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -79,11 +86,11 @@
                                 <div class="row">
                                     <div class="col">
                                         <h5 class="card-title text-uppercase text-muted mb-0">Total Ejemplares</h5>
-                                        <span class="h2 font-weight-bold mb-0">924</span>
+                                        <span class="h2 font-weight-bold mb-0" id="total_ejemplares">924</span>
                                     </div>
                                     <div class="col-auto">
                                         <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
-                                            <i class="ni ni-money-coins"></i>
+                                            <i class="fas fa-horse-head"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -97,8 +104,8 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col">
-                                        <h5 class="card-title text-uppercase text-muted mb-0"></h5>
-                                        <span class="h2 font-weight-bold mb-0">49,65%</span>
+                                        <h5 class="card-title text-uppercase text-muted mb-0">Pagos</h5>
+                                        <span class="h2 font-weight-bold mb-0" id="total_pagos">49,65%</span>
                                     </div>
                                     <div class="col-auto">
                                         <div class="icon icon-shape bg-gradient-info text-white rounded-circle shadow">
@@ -124,25 +131,26 @@
                         <div class="row align-items-center">
                             <div class="col">
                                 <h6 class="text-light text-uppercase ls-1 mb-1">Resúmen</h6>
-                                <h5 class="h3 mb-0">Montos por cada cuota</h5>
+                                <h5 class="h3 mb-0">Eventos de la Temporada</h5>
                             </div>
                             <div class="col">
                                 <ul class="nav nav-pills justify-content-end">
-                                    <li class="nav-item mr-2 mr-md-0" data-toggle="chart"
-                                        data-target="#chart-sales-dark"
-                                        data-update='{"data":{"datasets":[{"data":[0, 20, 10, 30, 15, 40, 20, 60, 60]}]}}'
-                                        data-prefix="$" data-suffix="k">
-                                        <a href="#" class="nav-link py-2 px-3 active" data-toggle="tab">
-                                            <span class="d-none d-md-block">Mes</span>
-                                            <span class="d-md-none">M</span>
+                                    <li class="nav-item mr-2 mr-md-0" >
+                                        <a href="#" class="nav-link py-2 px-3 active" data-toggle="tab" id="clasico">
+                                            <span class="d-none d-md-block">Clásico</span>
+                                            <span class="d-md-none">C</span>
                                         </a>
                                     </li>
-                                    <li class="nav-item" data-toggle="chart" data-target="#chart-sales-dark"
-                                        data-update='{"data":{"datasets":[{"data":[0, 20, 5, 25, 10, 30, 15, 40, 40]}]}}'
-                                        data-prefix="$" data-suffix="k">
-                                        <a href="#" class="nav-link py-2 px-3" data-toggle="tab">
-                                            <span class="d-none d-md-block">Semana</span>
-                                            <span class="d-md-none">W</span>
+                                    <li class="nav-item mr-2 mr-md-0" >
+                                        <a href="#" class="nav-link py-2 px-3 " data-toggle="tab" id="derby">
+                                            <span class="d-none d-md-block">Derby</span>
+                                            <span class="d-md-none">D</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item" >
+                                        <a href="#" class="nav-link py-2 px-3 " data-toggle="tab" id="futurity">
+                                            <span class="d-none d-md-block">Futurity</span>
+                                            <span class="d-md-none">F</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -150,6 +158,25 @@
                         </div>
                     </div>
                     <div class="card-body">
+                        <div class="table-responsive pb-8">
+                        <table class="table table-flush" id="result_list_et">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th>EVENTO</th>
+                                    <th>NOMINACIÓN</th>
+                                    <th>INSCRIPCIÓN</th>
+                                    <th>ELIMINATORIAS</th>
+                                    <th>FINAL</th>
+{#                                    <th >CONDICIÓN</th>#}
+                                    <th>DISTANCIA</th>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+
+                            </tbody>
+                        </table>
+                        </div>
                         <!-- Chart -->
                         <div class="chart">
                             <!-- Chart wrapper -->
@@ -164,11 +191,26 @@
                         <div class="row align-items-center">
                             <div class="col">
                                 <h6 class="text-uppercase text-muted ls-1 mb-1">Resúmen</h6>
-                                <h5 class="h3 mb-0">Ordenes totales</h5>
+                                <h5 class="h3 mb-0">Cuadras </h5>
                             </div>
                         </div>
                     </div>
                     <div class="card-body">
+                        <div class="table-responsive pb-4">
+                            <table class="table table-flush" id="result_list_ce">
+                                <thead class="thead-light">
+                                <tr>
+                                    <th>CUADRA</th>
+                                    <th># EJEM.</th>
+
+                                </tr>
+                                </thead>
+
+                                <tbody id="tbody_cuadras_ejemplares">
+
+                                </tbody>
+                            </table>
+                        </div>
                         <!-- Chart -->
                         <div class="chart">
                             <canvas id="chart-bars" class="chart-canvas"></canvas>
@@ -290,7 +332,20 @@
                         </div>
                     </div>
                     <div class="card widget-calendar">
+                        <table class="table align-items-center table-flush" id="result_list_rr">
+                            <thead class="thead-light">
+                            <tr>
+                                <th scope="col">Evento</th>
+                                <th scope="col">Cuota</th>
+                                <th scope="col">Total</th>
 
+                            </tr>
+                            </thead>
+                            <tbody>
+
+
+                            </tbody>
+                        </table>
                         <div data-toggle="widget-calendar"></div>
                     </div>
                 </div>
@@ -304,15 +359,30 @@
                         <div class="row align-items-center">
                             <div class="col">
                                 <h6 class="text-uppercase text-muted ls-1 mb-1">Resúmen</h6>
-                                <h5 class="h3 mb-0">Montos nominados vs inscritos</h5>
+                                <h5 class="h3 mb-0">Ejemplares nominados </h5>
                             </div>
                         </div>
                     </div>
                     <div class="card-body">
-  <div class="chart">
-              <!-- Chart wrapper -->
-              <canvas id="chart-doughnut" class="chart-canvas"></canvas>
-            </div>
+
+                        <table class="table align-items-center table-flush" id="result_list_en">
+                            <thead class="thead-light">
+                            <tr>
+                                <th scope="col">Evento</th>
+                                <th scope="col">Ejemplares</th>
+                                <th scope="col">Elegibles del</th>
+
+                            </tr>
+                            </thead>
+                            <tbody>
+
+
+                            </tbody>
+                        </table>
+                        <div class="chart">
+                          <!-- Chart wrapper -->
+                          <canvas id="chart-doughnut" class="chart-canvas"></canvas>
+                        </div>
                     </div>
                 </div>
             </div>
