--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -36,7 +36,7 @@
         $('#id_elegibles_evento').addClass('select2');
         // $('#id_cuadra').addClass('select2');
          $('#id_evento').addClass('select2');
-         $('.field-cuenta div select').addClass('select2');
+       //  $('.field-cuenta div select').addClass('select2');
          // $('#id_ejemplar').addClass('select2');
 
          // $('#id_cuadra').attr('multiple', 'multiple');
