--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -324,9 +324,9 @@
                     <div class="card-header border-0">
                         <div class="row align-items-center">
                             <div class="col">
-                                <h3 class="mb-0">Eventos por temporada</h3>
+                                <h3 class="mb-0">Recibos por Cuotas</h3>
                             </div>
-                            <div class="col text-right">
+                        s    <div class="col text-right">
                                 <a href="#!" class="btn btn-sm btn-primary">Ver todo</a>
                             </div>
                         </div>
