--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -15,6 +15,7 @@
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
 <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+
 <script>
     $(document).ready(function () {
         $('.vIntegerField, .vTextField, .vDateField, .vLargeTextField').addClass('form-control');
@@ -49,3 +50,48 @@
         $(".select2").select2({});
     });
 </script>
+
+<script>
+
+    $(document).ready( function () {
+    $('#result_list_et').DataTable({
+
+                        destroy: true,
+        processing: true,
+        select: true,
+        paging: true,
+        lengthChange: true,
+        "lengthMenu": [[13, 25, 50, -1], [13, 25, 50, "All"]],
+        searching: true,
+        "order": [],
+        info: false,
+        responsive: true,
+        autoWidth: false,
+        language: {
+					paginate: {
+						previous: "<i class='fas fa-angle-left'>",
+						next: "<i class='fas fa-angle-right'>"
+					},
+						"sProcessing": "Procesando...",
+						"sLengthMenu": "Mostrar _MENU_ registros",
+						"sZeroRecords": "No se encontraron resultados",
+						"sEmptyTable": "NingÃºn dato disponible en esta tabla",
+						"sInfo": "",
+						"sInfoEmpty": "",
+						"sInfoFiltered": "(filtrado de un total de _MAX_ registros)",
+						"sInfoPostFix": "",
+						"sSearch": "Buscar:",
+						"sUrl": "",
+						"sInfoThousands": ",",
+						"sLoadingRecords": "Cargando...",
+						"oPaginate": {
+							"sFirst": "Primero",
+							"sLast": "Ãšltimo",
+							"sNext": "Siguiente",
+							"sPrevious": "Anterior"
+						}
+					},
+    });
+} );
+    </script>
+
