--- a/apps/templates/admin/edit_inline/tabular.html
+++ b/apps/templates/admin/edit_inline/tabular.html
@@ -20,7 +20,7 @@
 
    {{ inline_admin_formset.formset.non_form_errors }}
    <div class="table-responsive results">
-        <table id="result_list" class="table align-items-center mod-table">
+        <table id="" class=" align-items-center mod-table">
      <thead><tr>
        <th class="original"></th>
      {% for field in inline_admin_formset.fields %}
